<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_tank_py</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sukarian2016@gmail.com">nathan</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>tf_transformations</exec_depend>
  <build_depend>tf_transformations</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>python3-libgpiod</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
